# DocParser

./: .env  .gitignore  README.md  _version.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
api/functional/: __init__.py  book_parser.py  html_parser.py  layout_parser.py  pdf_parser.py  t_ocr.py
api/server/: settings.py
docparser_feb/api/functional/: html_parser.py  pdf_parser.py
docparser_feb/scripts/: __init__.py  file_utils.py  log_level.py  string_utils.py
docparser_feb/scripts/nlp/: __init__.py  rag_tokenizer.py  synonym.py  term_weight.py
docparser_feb/scripts/openai/: openai.py  prompts.py
docparser_feb/scripts/postprocess/: __init__.py  html_postprocess.py  pdf_postprocess.py
docparser_feb/scripts/rendering/: pdf_rendering.py
docparser_feb/src/: __init__.py
docparser_feb/src/parser/: __init__.py  docx_parser.py  excel_parser.py  html_parser.py  pdf_parser.py
docparser_feb/src/parser/resume/entities/: corporations.py
docparser_feb/src/vision/: __init__.py  layout_recognizer.py  nougat.py  ocr.py  operators.py  recognizer.py  table_structure_recognizer.py
scripts/: file_utils.py  markdown.py
scripts/nlp/: __init__.py  rag_tokenizer.py  split_text.py  synonym.py  term_weight.py
scripts/openai/: openai.py  prompts.py
scripts/postprocess/: __init__.py  html_postprocess.py  pdf_postprocess.py
scripts/rendering/: pdf_rendering.py
src/: __init__.py
src/parser/: __init__.py  docx_parser.py  excel_parser.py  html_parser.py  json_parser.py  pdf_parser.py
src/parser/resume/: step_one.py  step_two.py
src/parser/resume/entities/: corporations.py  industries.py
src/vision/: __init__.py  layout_recognizer.py  nougat.py  ocr.py  postprocess.py  recognizer.py  seeit.py  t_recognizer.py  table_structure_recognizer.py
utils/: __init__.py  file_utils.py  markdown.py
utils/nlp/: __init__.py  rag_tokenizer.py  synonym.py  term_weight.py
