[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "docparser-feb"
dynamic = ["version"]
authors = [
    {name = "Licheng Wang", email = "244267620@qq.com"},
]
description = "Document parsing tool for LLM training and Rag"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pdf", "LLM", "ChatGPT", "transformer", "pytorch", "deep learning"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "albumentations==1.4.11",
    "bs4",
    "cn2an==0.5.22",
    "datrie==0.8.2",
    "effdet==0.3",
    "hanziconv==0.3.2",
    "html_text==0.6.2",
    "lxml==5.1.0",
    "layoutparser",
    "nougat-ocr",
    "nltk",
    "opencv-python==4.9.0.80",
    "openpyxl==3.1.2",
    "pdfplumber",
    "pyclipper",
    "PyPDF2",
    "python-docx==1.1.0",
    "python-pptx==0.6.23",
    "ruamel.yaml==0.18.6",
    "roman-numbers==1.0.2",
    "shapely==2.0.3",
    "StrEnum==0.4.15",
    "tika",
    "transformers",
    "tokenizers==0.19.1",
    "word2number==1.1",
    "xgboost==2.0.3",
    "langdetect"
]

[project.urls]
Homepage = "https://github.com/feb-co/DocParser"

[project.scripts]
docparser-pdf = "docparser_feb.api.functional.pdf_parser:main"
docparser-html = "docparser_feb.api.functional.html_parser:main"


[tool.setuptools_scm]
write_to = "_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
